[workspace]
resolver="2"
members = [
	"hxcadaptor-sys",
	"hxcadaptor",
	"hxcfe-sys",
	"hxcfe"
]

[workspace.dependencies]

hxcadaptor-sys = { version="0.1.2" }
hxcadaptor = { version="0.1.2" }
hxcfe-sys = { version="0.1.2" }
hxcfe = { version="0.1.2" }

[patch.crates-io]

hxcadaptor-sys = { path = "hxcadaptor-sys" }
hxcadaptor = { path = "hxcadaptor" }
hxcfe-sys = { path = "hxcfe-sys" }
hxcfe = { path = "hxcfe" }