[workspace]
resolver="2"
members = [
	"hxcadaptor-sys",
	"hxcfe-sys",
	"hxcfe"
]

[workspace.dependencies]

hxcadaptor-sys = { version="0.1.5" }
hxcfe-sys = { version="0.1.5" }
hxcfe = { version="0.1.5" }

make-cmd = "0.1.0"
dunce = "1.0.4"
bindgen = "0.68.1"
copy_dir = "0.1.3"

[patch.crates-io]

hxcadaptor-sys = { path = "hxcadaptor-sys" }
hxcfe-sys = { path = "hxcfe-sys" }
hxcfe = { path = "hxcfe" }