[package]
name = "hxcadaptor-sys"
version = "0.1.3"
edition = "2021"
links = "hxcadaptor"
repository = "https://github.com/cpcsdk/hxcfe_rs"
authors = ["Romain Giot <giot.romain@gmail.com>"]
license = "GPL-3.0-only"
description = "Bindings for libhxcfe https://github.com/jfdelnero/HxCFloppyEmulator/. Unfinished work, contributions are welcomed."
readme = "../Readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
make-cmd = "0.1.0"
dunce = "1.0.4"
bindgen = "0.65.1"
copy_dir = "0.1.3"

[lib]
name = "hxcadaptor_sys"
path = "src/lib.rs"