[package]
name = "hxcadaptor"
version = "0.1.0"
edition = "2021"
authors = ["Romain Giot <giot.romain@gmail.com>"]
repository = "https://github.com/cpcsdk/hxcfe_rs"
license = "GPL3"
description = "Bindings for libhxcfe https://github.com/jfdelnero/HxCFloppyEmulator/. Unfinished work, contributions are welcomed."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hxcadaptor-sys.workspace = true