[package]
name = "hxcadaptor"
version = "0.1.4"
edition = "2021"
authors = ["Romain Giot <giot.romain@gmail.com>"]
repository = "https://github.com/cpcsdk/hxcfe_rs"
license = "GPL-3.0-only"
description = "Bindings for libhxcfe https://github.com/jfdelnero/HxCFloppyEmulator/. Unfinished work, contributions are welcomed."
readme = "../Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hxcadaptor-sys.workspace = true