[package]
name = "hxcfe-sys"
version = "0.1.0"
edition = "2021"
links = "hxcfe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hxcadaptor-sys.workspace = true

[build-dependencies]
make-cmd = "0.1.0"
dunce = "1.0.4"
bindgen = "0.65.1"

[lib]
name = "hxcfe_sys"
path = "src/lib.rs"