[package]
name = "hxcfe-sys"
version = "0.1.5"
edition = "2021"
links = "hxcfe"
repository = "https://github.com/cpcsdk/hxcfe_rs"
authors = ["Romain Giot <giot.romain@gmail.com>"]
license = "GPL-3.0-only"
description = "Bindings for libhxcfe https://github.com/jfdelnero/HxCFloppyEmulator/. Unfinished work, contributions are welcomed."
readme = "../Readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hxcadaptor-sys.workspace = true

[build-dependencies]
make-cmd.workspace = true
dunce.workspace = true
bindgen.workspace = true
copy_dir.workspace = true

[lib]
name = "hxcfe_sys"
path = "src/lib.rs"