[package]
name = "hxcfe"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cpcsdk/hxcfe_rs"
authors = ["Romain Giot <giot.romain@gmail.com>"]
license = "GPL3"
description = "Bindings for libhxcfe https://github.com/jfdelnero/HxCFloppyEmulator/. Unfinished work, contributions are welcomed."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hxcfe-sys.workspace = true
enumn = "*"
once_cell = "1.18.0"
parking_lot = "*"