[package]
name = "hxcfe"
version = "0.1.5"
edition = "2021"
repository = "https://github.com/cpcsdk/hxcfe_rs"
authors = ["Romain Giot <giot.romain@gmail.com>"]
license = "GPL-3.0-only"
description = "Bindings for libhxcfe https://github.com/jfdelnero/HxCFloppyEmulator/. Unfinished work, contributions are welcomed."
readme = "../Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hxcfe-sys.workspace = true
enumn = "0.1.12"
once_cell = "1.18.0"
parking_lot = "0.12.1"